--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,4 +6,9 @@ ul {
 
 li {
     margin: 15px;
+    padding: 15px;
+    text-align: center;
+    border: 2px solid #000;
+    border-radius: 30px;
+    background-color: #fff;
 }
