--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,19 @@
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.fondo {
+    position: absolute;
+    height: 100vh;
+    width: 97vw;
+    padding: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 ul {
     list-style: none;
     margin : 0;
@@ -11,10 +27,12 @@ li {
     border: 2px solid #000;
     border-radius: 30px;
     background-color: #fff;
+    opacity: 75%;
 }
 
 li.active {
     background-color: #ffc0cb;
+    opacity: 100%;
 }
 
 button {
